# TangoDatabase

./: CMakeLists.txt  ClassFactory.cpp  DataBase.cpp  DataBase.h  DataBase.xmi  DataBaseClass.cpp  DataBaseClass.h  DataBaseStateMachine.cpp  DataBaseUtils.cpp  Makefile  Makefile.am  Makefile.in  README  README.md  create_db.sh.in  create_db.sql.in  main.cpp  stored_proc.sql.in  update_db.sh.in  update_db.sql.in  update_db5.sql.in  update_db6.sql.in  update_db7.sql.in  update_db8.sql.in  update_db_from_5_to_9.3.4.sql.in  update_db_from_6_to_9.3.3.sql.in  update_db_from_7_to_9.3.3.sql.in  update_db_from_8_to_9.3.3.sql.in  update_db_from_9.2.5_to_9.3.3.sql.in  update_starter.cpp  update_starter.h
classes/cpp/dbase/tags/DataBase-Release-4.21/: DataBaseClass.cpp  update_db.sql.in  update_db5.sql.in
classes/cpp/dbase/tags/DataBase-Release-4.22/: DataBase.cpp  create_db.sql.in  update_db.sh.in  update_db.sql.in
classes/cpp/dbase/tags/DataBase-Release-4.23/: create_db_tables.sql.in  update_db.sql.in  update_db7.sql.in
classes/cpp/dbase/tags/DataBase-Release-4.23/win64/database/: database.vcxproj
classes/cpp/dbase/tags/DataBase-Release-4_18/: DataBase.cpp  DataBase.xmi  DataBaseClass.cpp  DataBaseStateMachine.cpp  main.cpp
classes/cpp/dbase/tags/DataBase-Release-4_19/: DataBase.cpp  Makefile.am  Makefile.in  update_starter.h
classes/cpp/dbase/tags/DataBase-Release-4_19/winnt/dbserver/: dbserver.vcproj
classes/cpp/dbase/tags/DataBase-Release-5.0/: DataBaseClass.cpp  Makefile.am  stored_proc.sql.in  update_db.sql.in  update_db7.sql.in
classes/cpp/dbase/tags/DataBase-Release-5.1/: DataBaseClass.cpp  DataBaseStateMachine.cpp  Makefile  Makefile.am  create_db_tables.sql.in  stored_proc.sql.in
classes/cpp/dbase/tags/DataBase-Release-5.1/win64/win64_vc12/: database.sln  database.vcxproj
classes/cpp/dbase/tags/DataBase-Release-5.2/: ClassFactory.cpp  DataBase.h  DataBase.xmi  Makefile.am  update_db6.sql.in
classes/cpp/dbase/tags/DataBase-Release-5.3/: DataBase.h  create_db.sql.in  main.cpp  my.cnf.in  rem_history.sql.in
classes/cpp/dbase/tags/DataBase-Release-5.4/: DataBase.cpp  DataBaseUtils.cpp  Makefile  Makefile.am  create_db.sh.in  create_db.sql.in  stored_proc.sql.in  update_db.sql.in  update_db7.sql.in  update_db8.sql.in
classes/cpp/dbase/tags/DataBase-Release-5_2/: DataBase.cpp  DataBase.h  DataBase.xmi  DataBaseClass.cpp  Makefile  update_db.sql.in
classes/cpp/dbase/tags/DataBase-Release_4_10_distrib/: DataBase.h  DataBase.xmi  create_db_tables.sql.in
classes/cpp/dbase/tags/DataBase-Release_4_11/: DataBaseClass.h  DataBaseStateMachine.cpp  create_db.sql.in  update_db5.sql.in
classes/cpp/dbase/tags/Database-Release-4.12/: ClassFactory.cpp  DataBase.cpp  DataBaseClass.h  DataBaseStateMachine.cpp  Makefile.am  Makefile.in  update_db.sh.in  update_starter.cpp
classes/cpp/dbase/tags/Database-Release-4.22/: DataBase.h  DataBase.xmi  DataBaseUtils.cpp  stored_proc.sql.in
classes/cpp/dbase/tags/Database-Release4.17/: DataBase.h  DataBaseStateMachine.cpp  DataBaseUtils.cpp  Makefile
classes/cpp/dbase/tags/Database_Release_4.13/: Makefile  update_db6.sql.in
classes/cpp/dbase/tags/Database_Release_4.14/: DataBase.h  Makefile.in  create_db.sql.in
classes/cpp/dbase/tags/Database_Release_4.14/winnt/dbserver/: dbserver.vcproj
classes/cpp/dbase/tags/Database_Release_4.15/: DataBase.cpp  Makefile  main.cpp  stored_proc.sql.in  update_db6.sql.in
classes/cpp/dbase/tags/Database_Release_4.16/: DataBase.cpp  DataBaseClass.cpp  DataBaseStateMachine.cpp  DataBaseUtils.cpp  stored_proc.sql.in  update_starter.h
classes/cpp/dbase/trunk/: ClassFactory.cpp  DataBase.cpp  DataBase.h  DataBase.xmi  DataBaseClass.cpp  DataBaseClass.h  DataBaseStateMachine.cpp  DataBaseUtils.cpp  Makefile  Makefile.am  Makefile.in  create_db.sql.in  create_db_tables.sql.in  main.cpp  stored_proc.sql.in  update_db.sql.in  update_db5.sql.in  update_db6.sql.in  update_db7.sql.in  update_starter.cpp
classes/cpp/dbase/trunk/win64/database/: database.vcxproj
classes/cpp/dbase/trunk/winnt/dbserver/: dbserver.sln  dbserver.vcproj
configure/: CMakeLists.txt  FindMySQL.cmake
win64/database/: database.vcxproj
win64/win64_vc10/: database.sln  database.vcxproj
win64/win64_vc12/: database.vcxproj
